--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -1,3 +1,7 @@
+:root {
+    --white: #F0F0F0;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -62,4 +66,8 @@ body {
         background-color: rgb(54, 54, 54);
         color: aliceblue;
     }
+}
+
+ul {
+    list-style: none;
 }
