--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
     text-decoration: none;
+    font-smooth: always;
 }
 
 html {
