--- a/src/styles/pages/Machines.scss
+++ b/src/styles/pages/Machines.scss
@@ -24,7 +24,7 @@
             li {
                 margin-top: 20px;
 
-                #dashboard {
+                #machine {
                     color: #6254FF;
                 }
 
