--- a/src/styles/pages/Dashboard.scss
+++ b/src/styles/pages/Dashboard.scss
@@ -16,7 +16,7 @@
 
         ul {
             margin-top: 20%;
-            
+
             li:first-child {
                 margin-top: 0;
             }
@@ -34,7 +34,7 @@
                     text-decoration: none;
                     color: var(--white);
                 }
-    
+
                 a:visited {
                     text-decoration: none;
                     color: var(--white);
@@ -43,13 +43,13 @@
         }
 
     }
-    
+
     .user-logout {
         display: flex;
         align-items: center;
         height: 10%;
         color: #f0f0f0;
-        
+
         p {
             font-size: 18px;
             padding: 10px;
@@ -107,20 +107,42 @@
                 border-radius: 10PX;
                 background-color: #39394B;
                 color: #f0f0f0;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
 
-                p {
-                    font-size: 16;
-                    font-weight: bold;
-                    padding-left: 10px;
-                    padding-top: 10px;
-                    word-wrap: break-word;
+                .color-red {
+                    margin-left: 10px;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50px;
+                    background-color: red;
                 }
 
-                h2 {
-                    font-size: 24;
-                    font-weight: 500;
-                    padding-left: 10px;
-                    padding-top: 10px;
+                .color-green {
+                    margin-left: 10px;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50px;
+                    background-color: greenyellow;
+                }
+
+                .text {
+                    width: 80%;
+                    p {
+                        font-size: 16;
+                        font-weight: bold;
+                        padding-left: 10px;
+                        padding-top: 10px;
+                        word-wrap: break-word;
+                    }
+
+                    h2 {
+                        font-size: 24;
+                        font-weight: 500;
+                        padding-left: 10px;
+                        padding-top: 10px;
+                    }
                 }
             }
         }
@@ -149,6 +171,11 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    
+                    .linha {
+                        width: 100%;
+                        height: 90%;
+                    }
                 }
             }
         }
